[package]
name = "jsb-std"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bitflags = "2.5.1"

[dev-dependencies]

[features]
default = []
std = []
alloc = []
